[package]
name = "jsbp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.32"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
opt-level = "z"
