[package]
name = "jsbp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.11"
zip = { version = "2.1.6", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
] }


[profile.release]
lto = true
opt-level = "z"
